start jazz pagina

--- a/HaarlemFestival/Views/Jazz/Jazz.cshtml
+++ b/HaarlemFestival/Views/Jazz/Jazz.cshtml
@@ -25,105 +25,25 @@
         <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3">Saturday<br />28-07-2018</button>
         <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4">Sunday<br />29-07-2018</button>
         <hr class="jazz_page_program_days_line"/>
-        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">Send</button>
+        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">Pass-Partout</button>
     </section>
 
-    <section class="jazz_page_gumbokings">
-        <section>
-
-        </section>
-        <section>
+    @foreach (var item in Model)
+    {
+        <section class="jazz_page_gumbokings">
             <section>
 
             </section>
             <section>
+                <section>
 
+                </section>
+                <section>
+
+                </section>
             </section>
         </section>
-    </section>
-
-    <section class="jazz_page_evolve">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
-
-    <section class="jazz_page_evolve">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
-
-    <section class="jazz_page_ntjamrosie">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
-
-    <section class="jazz_page_wickedjazzsounds">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
-
-    <section class="jazz_page_tomthomsonassemble">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
-
-    <section class="jazz_page_jonnafraser">
-        <section>
-
-        </section>
-        <section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </section>
-    </section>
+    }
+    
 </section>
 
