--- a/HaarlemFestival/Views/Talking/Index.cshtml
+++ b/HaarlemFestival/Views/Talking/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using HaarlemFestival.Model;
+@model HaarlemFestival.Model.PagePlusDescriptions
 @{
     ViewBag.Title = "Index";
 }
@@ -7,22 +8,27 @@
 
 <section class="TalkingIntro">
 
-    <h2 class="TalkingHeader">Welkom to Talking Haarlem</h2>
+    <h2 class="TalkingHeader">@Model.Page.PageDescriptions[0].Title</h2>
 
     <p class="TalkingIntroText">
-        This page contains information on the different speakers who will be attending Talking Haarlem. You can also order your tickets here. If you decide to go to one of the events and you want to ask any of the speakers a personal question you can also submit those questions on this page. All events are between 20:00 -  22:00 at 
+       @Model.Page.PageDescriptions[0].DescriptionText 
     </p>
 
 </section>
+
+
+@foreach (Activity a in Model.ActivityDescriptions)
+{
+    
 
 <section class="TalkingEvent">
     
     <section class="TalkingDag">
         <header class="TalkingDagHeader">
-        THU
+        @a.Timeslots[0].StartTime.DayOfWeek
         </header>
         <header class="TalkingDagHeader">
-            26-7-2018
+            @a.Timeslots[0].StartTime.ToString("dd/MM/yyyy")
         </header>
     </section>
 
@@ -33,15 +39,16 @@
         <section class="TalkingSprekerUitleg">
 
             <h2 class="TalkingSprekerHeader">
-                Giel Beelen
+                @a.ActivityDescriptions[0].Title
+
             </h2>
             <p class="TalkingSprekerText">
-                Giel Beelen(born in 1977) started working for the radio at a pretty young age, it all started in 1997 at 3FM radio where he hosted a night show. After a few years he was allowed to present during the day. In 2003 he won the Marconi Award for best radio host, and won again in 2005, 2006 and 2007.
+                @a.ActivityDescriptions[0].DescriptionText
             </p>
 
         </section>
 
-        <button name="Ask a Question" type="button" class="TalkingButtonSpreker">Ask Question</button>
+        <button id = @Html.Raw(a.ActivityDescriptions[0].Title + "Button") name="AskAQuestion" type="button" class="TalkingButtonSpreker">Ask Question</button>
 
     </section>
 
@@ -52,17 +59,19 @@
         <section class="TalkingSprekerUitleg2">
 
             <h2 class="TalkingSprekerHeader2">
-                Giel Beelen
+                @a.ActivityDescriptions[1].Title
             </h2>
             <p class="TalkingSprekerText2">
-                Giel Beelen(born in 1977) started working for the radio at a pretty young age, it all started in 1997 at 3FM radio where he hosted a night show. After a few years he was allowed to present during the day. In 2003 he won the Marconi Award for best radio host, and won again in 2005, 2006 and 2007.
+                @a.ActivityDescriptions[1].DescriptionText
             </p>
 
         </section>
 
-        <button name="Ask a Question" type="button" class="TalkingButtonSpreker2">Ask Question</button>
-
+        <button id = @Html.Raw(a.ActivityDescriptions[1].Title + "Button") name="AskAQuestion" type="button" class="TalkingButtonSpreker2">Ask Question</button>
+        <button id = @Html.Raw(a.Name + "Button") name="BookNow" type="button" class="TalkingButtonBook">Book Now</button>
     </section>
+    
 
 </section>
+}
 
