--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -363,7 +363,7 @@ footer {
     width: 100%;
     text-align: center;
     line-height: 2em;
-    margin-top: 0.5%;
+    margin-top: 4%;
     padding : 0px;
     border-top-style: solid;
     border-color: #F8473E;
@@ -397,13 +397,13 @@ footer {
     height: 14em;
     margin-left: 40%;
     margin-right: 40%;
-    margin-top: 0.5%;
+    margin-top: 4%;
     
 }
 
 .TalkingDagHeader {
     text-align: center;
-    padding-top: 20%;
+    padding-top: 15%;
     padding-bottom: 0px;
     font-size: 2em;
     font-weight: bold;
@@ -421,7 +421,7 @@ footer {
 .TalkingSprekerImg {
     background-color: purple; 
     width: 20%;
-    height: 20em;   
+    height: 18em;   
     margin-top: 4%;
     margin-right: 3%;
     margin-bottom: 2%;
@@ -430,11 +430,12 @@ footer {
 
 .TalkingSprekerUitleg {
     width: 50%;
-    height: 2em;
+    height: 20em;
     margin-top: 4%;
     margin-right: 10%;
     margin-bottom: 2%;
     float: left;
+    
 }
 
 .TalkingSprekerHeader{
@@ -448,7 +449,7 @@ footer {
 
 .TalkingButtonSpreker {
     font-size: 1.8em;
-    margin-top: 15%;
+    margin-top: 13%;
     margin-bottom: 15%;
     margin-left: 0;
     float: left;
@@ -466,7 +467,7 @@ footer {
 
 .TalkingSprekerImg2 {
     width: 20%;
-    height: 20em;
+    height: 18em;
     background-color: purple;
     margin-top: 1%;
     margin-right: 3%;
@@ -476,11 +477,12 @@ footer {
 
 .TalkingSprekerUitleg2 {
     width: 50%;
-    height: 2em;
-    margin-top: 4%;
+    height: 20em;
+    margin-top: 0%;
     margin-right: 10%;
     margin-bottom: 2%;
     float: left;
+    
 }
 
 .TalkingSprekerHeader2 {
@@ -493,10 +495,19 @@ footer {
 
 .TalkingButtonSpreker2 {
     font-size: 1.8em;
-    margin-top: 15%;
-    margin-bottom: 15%;
+    margin-top: 9%;
+    margin-bottom: 10%;
     margin-left: 0;
     float: left;
     background-color: #199ED8;
+    border-radius: 15px, 15px;
+}
+
+.TalkingButtonBook {
+    font-size: 1.8em;
+    margin: 0%;
+    margin-right: 2.4%;
+    float: right;
+    background-color: #1DBF3B;
     border-radius: 15px, 15px;
 }
