--- a/HaarlemFestival/Views/Jazz/Jazz.cshtml
+++ b/HaarlemFestival/Views/Jazz/Jazz.cshtml
@@ -5,30 +5,39 @@
 
 <section class="jazz_page_section">
     <section class="jazz_page_info">
-        <section class="jazz_page_info_h+p">
-            <h2 class="jazz_page_info_h">TEXT HEADER JAZZ UIT DB</h2>
+        <section class="jazz_page_info_hp">
+            <h3 class="jazz_page_info_h">Jazz@Patronaat</h3>
             <hr class="jazz_page_info_line"/>
-            <p class="jazz_page_info_p">TEXT INFO JAZZ UIT DB</p>
+            <p class="jazz_page_info_p">Haarlem Jazz is an important music 
+            event for the City of Haarlem. During the Haarlem festival, we 
+            want to recreate part of this festival by inviting some of the 
+            bands that previously performed there to play at the Patronaat. 
+            On Sunday, some of the bands will take to the big stage at the 
+            Grote Markt to perform for all visitors for free!</p>
         </section>
         <section class="jazz_page_info_locatiepatronaat">
-            <p>PATRONAAT INFO UIT DB</p>
+            <h4 class="jazz_page_info_locatiepatronaat_h">Locatie Patronaat</h4>
+            <p class="jazz_page_info_locatiepatronaat_p">Adres: Zijlsingel 2, 2013 DN Haarlem<br />
+               Telefoon: 023 517 5850<br />
+               Provincie: Noord-Holland</p>
         </section>
         <section class="jazz_page_info_locatiegrotemarkt">
-            <p>GROTEMARKT INFOT UIT DB</p>
+            <h4 class="jazz_page_info_locatiegrotemarkt_h">Locatie Grote Markt</h4>
+            <p class="jazz_page_info_locatiegrotemarkt_p">Adres: Grote Markt Haarlem<br />
+               Provincie: Noord-Holland</p>
         </section>
     </section>
 
     <section class="jazz_page_program_days">
-        <h3 class="jazz_page_program_days_header">PROGRAMME HEADER UIT DB</h3>
+        <h3 class="jazz_page_program_days_header">Programme</h3>
         <button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1">Thursday<br />26-07-2018</button>
         <button name="friday" type="submit" class="jazz_page_program_friday" tabindex="2">Friday<br />27-07-2018</button>
         <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3">Saturday<br />28-07-2018</button>
         <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4">Sunday<br />29-07-2018</button>
-        <hr class="jazz_page_program_days_line"/>
         <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">Pass-Partout</button>
     </section>
 
-    @foreach (var item in Model)
+    @*@foreach (var activiteit in Model)
     {
         <section class="jazz_page_gumbokings">
             <section>
@@ -43,7 +52,7 @@
                 </section>
             </section>
         </section>
-    }
+    }*@
     
 </section>
 
