--- a/HaarlemFestival/Views/Jazz/Jazz.cshtml
+++ b/HaarlemFestival/Views/Jazz/Jazz.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model HaarlemFestival.Model.PagePlusDescriptions
 @{
     ViewBag.Title = "Jazz";
 }
@@ -6,35 +6,27 @@
 <section class="jazz_page_section">
     <section class="jazz_page_info">
         <section class="jazz_page_info_hp">
-            <h3 class="jazz_page_info_h">Jazz@Patronaat</h3>
+            <h3 class="jazz_page_info_h">@Model.Page.PageDescriptions[0].Title</h3>
             <hr class="jazz_page_info_line"/>
-            <p class="jazz_page_info_p">Haarlem Jazz is an important music 
-            event for the City of Haarlem. During the Haarlem festival, we 
-            want to recreate part of this festival by inviting some of the 
-            bands that previously performed there to play at the Patronaat. 
-            On Sunday, some of the bands will take to the big stage at the 
-            Grote Markt to perform for all visitors for free!</p>
+            <p class="jazz_page_info_p">@Model.Page.PageDescriptions[0].DescriptionText</p>
         </section>
         <section class="jazz_page_info_locatiepatronaat">
-            <h4 class="jazz_page_info_locatiepatronaat_h">Locatie Patronaat</h4>
-            <p class="jazz_page_info_locatiepatronaat_p">Adres: Zijlsingel 2, 2013 DN Haarlem<br />
-               Telefoon: 023 517 5850<br />
-               Provincie: Noord-Holland</p>
+            <h4 class="jazz_page_info_locatiepatronaat_h">@Model.Page.PageDescriptions[1].Title</h4>
+            <p class="jazz_page_info_locatiepatronaat_p">@Html.Raw(HttpUtility.HtmlDecode(Model.Page.PageDescriptions[1].DescriptionText))</p>
         </section>
         <section class="jazz_page_info_locatiegrotemarkt">
-            <h4 class="jazz_page_info_locatiegrotemarkt_h">Locatie Grote Markt</h4>
-            <p class="jazz_page_info_locatiegrotemarkt_p">Adres: Grote Markt Haarlem<br />
-               Provincie: Noord-Holland</p>
+            <h4 class="jazz_page_info_locatiegrotemarkt_h">@Model.Page.PageDescriptions[2].Title</h4>
+            <p class="jazz_page_info_locatiegrotemarkt_p">@Html.Raw(HttpUtility.HtmlDecode(Model.Page.PageDescriptions[2].DescriptionText))</p>
         </section>
     </section>
 
     <section class="jazz_page_program_days">
-        <h3 class="jazz_page_program_days_header">Programme</h3>
-        <button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1">Thursday<br />26-07-2018</button>
-        <button name="friday" type="submit" class="jazz_page_program_friday" tabindex="2">Friday<br />27-07-2018</button>
-        <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3">Saturday<br />28-07-2018</button>
-        <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4">Sunday<br />29-07-2018</button>
-        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">Pass-Partout</button>
+        <h3 class="jazz_page_program_days_header">@Model.Page.PageDescriptions[3].Title</h3>
+        <button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1">@Model.Page.PageDescriptions[4].Title<br />@Model.Page.PageDescriptions[4].DescriptionText</button>
+        <button name="friday" type="submit" class="jazz_page_program_friday" tabindex="2">@Model.Page.PageDescriptions[5].Title<br />@Model.Page.PageDescriptions[5].DescriptionText</button>
+        <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3">@Model.Page.PageDescriptions[6].Title<br />@Model.Page.PageDescriptions[6].DescriptionText</button>
+        <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4">@Model.Page.PageDescriptions[7].Title<br />@Model.Page.PageDescriptions[7].DescriptionText</button>
+        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">@Model.Page.PageDescriptions[8].Title</button>
     </section>
 
     @*@foreach (var activiteit in Model)
