--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -4,44 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    <style>
-        .loader {
-            border: 16px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 16px solid blue;
-            border-bottom: 16px solid blue;
-            width: 120px;
-            height: 120px;
-            -webkit-animation: spin 2s linear infinite;
-            animation: spin 2s linear infinite;
-        }
-
-        -webkit-keyframes spin {
-            0%
-
-        {
-            -webkit-transform: rotate(0deg);
-        }
-
-        100% {
-            -webkit-transform: rotate(360deg);
-        }
-
-        }
-
-        keyframes spin {
-            0%
-
-        {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(360deg);
-        }
-
-        }
-    </style>
+    
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
@@ -71,12 +34,12 @@
             <nav class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Jazz", "Jazz", "Jazz")</li>
+                    <li>@Html.ActionLink("Jazz", "Index", "Jazz")</li>
                     <li>@Html.ActionLink("Dinner", "Index", "Dinner")</li>
                     <li>@Html.ActionLink("Talking", "Index", "Talking")</li>
                     <li>@Html.ActionLink("Historic", "Index", "Historic")</li>
                     <li>@Html.ActionLink("Agenda", "Index", "Agenda")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Contact")</li>
+                    <li>@Html.ActionLink("Contact", "Index", "Contact")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
