kleine bewerking (voor pullen)

--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -387,7 +387,7 @@ footer {
 }
 .HistoricRoute p {
     display: inline-block;
-    width: 49%;
+    width: 568px;
 }
 .HistoricRoute hr {
     margin-top: 20px;
