Event highlights now work

--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -58,23 +58,23 @@
         <h1>@Model.PageDescriptions[6].Title</h1>
 
         <article class="event_highlight">
-            <h2>@Html.ActionLink(@Model.PageDescriptions[7].Title, "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
-            <p>@Html.ActionLink(@Model.PageDescriptions[7].DescriptionText, "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+            <h2>@Html.ActionLink(@Model.PageDescriptions[7].Title, "Index", "Jazz", null, new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink(@Model.PageDescriptions[7].DescriptionText, "Jazz", "Jazz", null, new { @class = "event_hl_link_makeup" })</p>
         </article>
 
         <article class="event_highlight">
-            <h2>@Html.ActionLink(@Model.PageDescriptions[8].Title, "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
-            <p>@Html.ActionLink(@Model.PageDescriptions[8].DescriptionText, "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+            <h2>@Html.ActionLink(@Model.PageDescriptions[8].Title, "Index", "Dinner", null, new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink(@Model.PageDescriptions[8].DescriptionText, "Index", "Dinner", null, new { @class = "event_hl_link_makeup" })</p>
         </article>
 
         <article class="event_highlight">
-            <h2>@Html.ActionLink(@Model.PageDescriptions[9].Title, "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
-            <p>@Html.ActionLink(@Model.PageDescriptions[9].DescriptionText, "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+            <h2>@Html.ActionLink(@Model.PageDescriptions[9].Title, "Index", "Talking", null, new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink(@Model.PageDescriptions[9].DescriptionText, "Index", "Talking", null,  new { @class = "event_hl_link_makeup" })</p>
         </article>
 
         <article class="event_highlight">
-            <h2>@Html.ActionLink(@Model.PageDescriptions[10].Title, "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
-            <p>@Html.ActionLink(@Model.PageDescriptions[10].DescriptionText, "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+            <h2>@Html.ActionLink(@Model.PageDescriptions[10].Title, "Index", "Historic", null, new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink(@Model.PageDescriptions[10].DescriptionText, "Index", "Historic", null, new { @class = "event_hl_link_makeup" })</p>
         </article>
     </article>
 </section>
