Basic changes voor sync

--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -678,3 +678,11 @@ footer {
     float : right;
     margin-top : 10px;
 }
+
+.jazz_page_imgsection{
+    float : left;
+}
+
+.jazz_page_actinfosection{
+
+}
