--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -33,11 +33,21 @@
     {
         <section class="jazz_page_acts">
             <section class="jazz_page_imgsection">
-                <img src=@Model.ActivityDescriptions[i].ActivityDescriptions[0].ImageUrl width="277" height="300" alt="Jazz @Model.ActivityDescriptions[i].ActivityDescriptions[0].Title" />
+                <img src=@Model.ActivityDescriptions[i].ActivityDescriptions[0].ImageUrl width="280" height="280" alt="Jazz @Model.ActivityDescriptions[i].ActivityDescriptions[0].Title" />
             </section>
             <section class="jazz_page_actinfosection">
-                <section></section>
-                <section></section>
+                <section>
+                    <h3>@Model.ActivityDescriptions[i].ActivityDescriptions[0].Title</h3>
+                    <p>@Model.ActivityDescriptions[i].ActivityDescriptions[0].DescriptionText</p>
+                </section>
+                <hr class="jazz_page_actinfosection_line"/>
+                <section>
+                    <p>@Model.Page.PageDescriptions[9].Title PatronaatDB</p>
+                    <p>@Model.Page.PageDescriptions[10].Title @Model.ActivityDescriptions[i].Timeslots[0].Hall</p>
+                    <p>@Model.Page.PageDescriptions[11].Title €@Model.ActivityDescriptions[i].Timeslots[0].Tickets[0].Price</p>
+                    <p>@Model.Page.PageDescriptions[12].Title @Model.ActivityDescriptions[i].Timeslots[0].StartTime - @Model.ActivityDescriptions[i].Timeslots[0].EndTime</p>
+                    <button class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
+                </section>
             </section>
         </section>
     }
