--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -45,7 +45,7 @@
                     <p>@Model.Page.PageDescriptions[9].Title PatronaatDB</p>
                     <p>@Model.Page.PageDescriptions[10].Title @Model.ActivityDescriptions[i].Timeslots[0].Hall</p>
                     <p>@Model.Page.PageDescriptions[11].Title €@Model.ActivityDescriptions[i].Timeslots[0].Tickets[0].Price</p>
-                    <p>@Model.Page.PageDescriptions[12].Title @Model.ActivityDescriptions[i].Timeslots[0].StartTime - @Model.ActivityDescriptions[i].Timeslots[0].EndTime</p>
+                    <p>@Model.Page.PageDescriptions[12].Title @Model.ActivityDescriptions[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.ActivityDescriptions[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
                     <button class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
                 </section>
             </section>
