minor changes dinner

--- a/HaarlemFestival/Views/Dinner/Details.cshtml
+++ b/HaarlemFestival/Views/Dinner/Details.cshtml
@@ -25,7 +25,7 @@
     <text><span style="color: red">*</span> text from db</text>
     <form>
         <fieldset>
-            <label class="restaurant_form_label" for="rday"></label>
+            <label class="restaurant_form_label" for="rday">text from db</label>
             <select class="restaurant_form_select_wide" id="rday">
                 <option></option>
                 <option></option>
@@ -33,7 +33,7 @@
             </select> 
         </fieldset>
         <fieldset>
-            <label class="restaurant_form_label" for="rtime"></label>
+            <label class="restaurant_form_label" for="rtime">text from db</label>
             <select class="restaurant_form_select_wide" id="rtime">
                 <option></option>
                 <option></option>
@@ -41,7 +41,7 @@
             </select>
         </fieldset>
         <fieldset>
-            <label class="restaurant_form_label" for="radults"></label>
+            <label class="restaurant_form_label" for="radults">text from db</label>
             <select class="restaurant_form_select_small" id="radults">
                 @for (int iAdults = 1; iAdults <= 10; iAdults++)
                 {
@@ -50,7 +50,7 @@
             </select>
         </fieldset>
         <fieldset>
-            <label class="restaurant_form_label" for="rkids"></label>
+            <label class="restaurant_form_label" for="rkids">text from db</label>
             <select class="restaurant_form_select_small" id="rkids">
                 @for (int iKids = 0; iKids <= 10; iKids++)
                 {
@@ -59,8 +59,9 @@
             </select>
         </fieldset>
         <fieldset>
-            <label class="restaurant_form_label" for="rmisc"></label>
+            <label class="restaurant_form_label" for="rmisc">text from db</label>
             <textarea class="restaurant_form_txtarea" id="rmisc" placeholder="Example: I am on a gluten-free diet"></textarea>
         </fieldset>
+        <button>Reserve</button>
     </form>
 </div>
