Jazz.js aangemaakt

--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Jazz";
 }
 
+@section AddToScripts{
+    <script src="@Url.Content("~/Scripts/Jazz.js")"></script>
+}
+
 <section class="jazz_page_section">
     <section class="jazz_page_info">
         <section class="jazz_page_info_hp">
