DIngen pushen om nieuwe dingen op te halen, je kent het wel

--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -58,6 +58,11 @@
             </section>
         </section>
     }
+
+    <div class="popup" onclick="myFunction()">
+        Click me!
+        <span class="popuptext" id="myPopup">Popup text...</span>
+    </div>
     
 </section>
 
