--- a/HaarlemFestival/Views/Historic/Historic.cshtml
+++ b/HaarlemFestival/Views/Historic/Historic.cshtml
@@ -6,7 +6,7 @@
 
 <section class="HistoricTitle">
 
-    <h1>@Model.Page.Titel</h1>
+    <h1>@Model.Page.Title</h1>
 
     <h2>@Model.Page.PageDescriptions[0].Title</h2>
 
