--- a/HaarlemFestival/Content/Admin.css
+++ b/HaarlemFestival/Content/Admin.css
@@ -1,4 +1,14 @@
-﻿.adminMain .imgUpload {
+﻿[draggable] {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    /* Required to make elements draggable in old WebKit */
+    -khtml-user-drag: element;
+    -webkit-user-drag: element;
+}
+
+.adminMain .imgUpload {
     display: none;
 }
 .admin.sidebar {
