--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -33,7 +33,7 @@
         <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3" onclick="location.href='@Url.Action("Index", "Jazz", new { id=3})'">@Model.Page.PageDescriptions[6].Title<br />@Model.Page.PageDescriptions[6].DescriptionText</button>
         <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4" onclick="location.href='@Url.Action("Index", "Jazz", new { id=4})'">@Model.Page.PageDescriptions[7].Title<br />@Model.Page.PageDescriptions[7].DescriptionText</button>
         
-       <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">@Model.Page.PageDescriptions[8].Title</button>
+        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">@Model.Page.PageDescriptions[8].Title</button>
     </section>
 
     @for (int i = 0; i < Model.ActivityDescriptions.Count; i++)
@@ -44,8 +44,8 @@
             </section>
             <section class="jazz_page_actinfosection">
                 <section>
-                    <h3>@Model.ActivityDescriptions[i].ActivityDescriptions[0].Title</h3>
-                    <p>@Model.ActivityDescriptions[i].ActivityDescriptions[0].DescriptionText</p>
+                    <h3 id="@Html.Raw(Model.ActivityDescriptions[i].Id)">@Model.ActivityDescriptions[i].ActivityDescriptions[0].Title</h3>
+                    <p id="@Html.Raw(Model.ActivityDescriptions[i].Id)">@Model.ActivityDescriptions[i].ActivityDescriptions[0].DescriptionText</p>
                 </section>
                 <hr class="jazz_page_actinfosection_line"/>
                 <section>
@@ -53,12 +53,13 @@
                     <p>@Model.Page.PageDescriptions[10].Title @Model.ActivityDescriptions[i].Timeslots[0].Hall</p>
                     <p>@Model.Page.PageDescriptions[11].Title €@Model.ActivityDescriptions[i].Timeslots[0].Tickets[0].Price</p>
                     <p>@Model.Page.PageDescriptions[12].Title @Model.ActivityDescriptions[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.ActivityDescriptions[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
-                    <button class="myBtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
+                    <button class="jazzAbtn" id="@Html.Raw(Model.ActivityDescriptions[i].Id)"  type="button">@Model.Page.PageDescriptions[13].Title</button>
                 </section>
             </section>
         </section>
     }
 
+    <!-- The Modal -->
     <div id="myModal" class="modal">
 
         <!-- Modal content -->
@@ -69,33 +70,5 @@
 
     </div>
 
-    <script>
-        // Get the modal
-        var modal = document.getElementsByClassName("myModal");
-
-        // Get the button that opens the modal
-        var btn = document.getElementsByClassName("myBtn");
-
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks the button, open the modal
-        btn.onclick = function () {
-            modal.style.display = "block";
-        }
-
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-    </script>
-    
 </section>
 
