--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -139,7 +139,7 @@ footer {
         margin-top: 0px;
     }
 
-}
+
 /*--------------Info section-----------------*/
 
 .info_festival {
@@ -600,7 +600,7 @@ footer {
     margin-bottom: 1em;
 }
 
-.TalkingSprekerImg {
+.TalkingSprekerImgContainer {
     background-color: purple;
     width: 20%;
     height: 18em;
@@ -608,6 +608,11 @@ footer {
     margin-right: 3%;
     margin-bottom: 2%;
     float: left;
+}
+
+.TalkingSprekerImg {
+    width: 100%;
+    height: 100%;
 }
 
 .TalkingSprekerUitleg {
@@ -645,7 +650,7 @@ footer {
     margin-bottom: 1em;
 }
 
-.TalkingSprekerImg2 {
+.TalkingSprekerImg2Container {
     width: 20%;
     height: 18em;
     background-color: purple;
@@ -653,6 +658,11 @@ footer {
     margin-right: 3%;
     margin-bottom: 2%;
     float: left;
+}
+
+.TalkingSprekerImg2{
+    width: 100%;
+    height: 100%;
 }
 
 .TalkingSprekerUitleg2 {
