Nu is ie echt verbeterd

--- a/HaarlemFestival/Views/Historic/Historic.cshtml
+++ b/HaarlemFestival/Views/Historic/Historic.cshtml
@@ -1,4 +1,4 @@
-﻿@model HaarlemFestival.Model.PagePlusDescriptions
+﻿@model HaarlemFestival.Model.PagePlusActivities
 
 @{
     ViewBag.Title = "Historic";
