--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -49,11 +49,11 @@
                 </section>
                 <hr class="jazz_page_actinfosection_line"/>
                 <section>
-                    <p>@Model.Page.PageDescriptions[9].Title PatronaatDB</p>
+                    <p>@Model.Page.PageDescriptions[9].Title @Model.Activities[i].Location.Name</p>
                     <p>@Model.Page.PageDescriptions[10].Title @Model.Activities[i].Timeslots[0].Hall</p>
                     <p>@Model.Page.PageDescriptions[11].Title €@Model.Activities[i].Timeslots[0].Tickets[0].Price</p>
                     <p>@Model.Page.PageDescriptions[12].Title @Model.Activities[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.Activities[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
-                    <button class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
+                    <button class="@Html.Raw("jazz_page_buybtn" + Model.Activities[i].Id)" type="button">@Model.Page.PageDescriptions[13].Title</button>
                 </section>
             </section>
         </section>
@@ -65,7 +65,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p>Some text in the Modal..</p>
+            <p class="modaltitle"></p>
         </div>
 
     </div>
