--- a/HaarlemFestival/Content/Admin.css
+++ b/HaarlemFestival/Content/Admin.css
@@ -6,8 +6,14 @@
     /* Required to make elements draggable in old WebKit */
     -khtml-user-drag: element;
     -webkit-user-drag: element;
+    transition: all 0.2s cubic-bezier(0.75, 0.0, 0.25, 1);
 }
-
+.dragged {
+    opacity : 0.4;
+}
+.dragOver {
+    transform: scale(1.02);
+}
 .adminMain .imgUpload {
     display: none;
 }
