--- a/HaarlemFestival/Views/ContentManagement/Contact.cshtml
+++ b/HaarlemFestival/Views/ContentManagement/Contact.cshtml
@@ -18,10 +18,10 @@
         @Html.HiddenFor(model => model.Name)
         <section class="adminSection col-md-10">
             <div class="form-group">
-                @Html.LabelFor(Model => Model.Titel, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(Model => Model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="">
-                    @Html.EditorFor(Model => Model.Titel, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(Model => Model.Titel, "", new { @class = "text-danger" })
+                    @Html.EditorFor(Model => Model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(Model => Model.Title, "", new { @class = "text-danger" })
                 </div>
             </div>
         </section>
